--- a/index.html
+++ b/index.html
@@ -1,96 +1,158 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Controle de Portaria</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  .hoje { box-shadow: 0 0 0 3px rgba(34,197,94,0.08) inset; } /* destaque suave para hoje */
-  .counter-badge { font-size: 1.05rem; padding: .4rem .7rem; }
-</style>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Debug - Controle de Portaria (Firestore)</title>
+  <style>
+    body{font-family:Arial,Helvetica,sans-serif;background:#f4f6f8;padding:20px}
+    .card{background:#fff;padding:16px;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.06);max-width:900px;margin:12px auto}
+    input,button{padding:8px;border-radius:6px;border:1px solid #cbd5e1}
+    button{cursor:pointer}
+    #status{margin-top:10px;padding:8px;border-radius:6px;background:#f8fafc;color:#0f172a}
+    .error{background:#fff1f2;color:#991b1b;border:1px solid #fecaca}
+    .ok{background:#ecfdf5;color:#064e3b;border:1px solid #bbf7d0}
+    .log{font-family:monospace;white-space:pre-wrap;max-height:220px;overflow:auto;padding:8px;background:#0f172a;color:#e6eef8;border-radius:6px}
+  </style>
 </head>
-<body class="bg-dark text-light p-4">
-<div class="container">
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1 class="mb-0">📋 Controle de Portaria</h1>
-    <div>
-      <span class="badge bg-info text-dark counter-badge" id="contadorDentro">Dentro: 0</span>
-      <button id="btnExportCSV" class="btn btn-outline-light btn-sm ms-2">Exportar CSV</button>
-    </div>
+<body>
+  <div class="card">
+    <h2>Controle de Portaria — Debug</h2>
+    <p>Use este arquivo para testar gravação e ver mensagens de erro diretamente.</p>
+
+    <form id="form" onsubmit="event.preventDefault(); registrarEntrada();">
+      <input id="nome" placeholder="Nome do visitante" required style="width:48%;margin-right:4%"/>
+      <input id="documento" placeholder="Documento (RG/CPF)" required style="width:48%"/><br/><br/>
+      <input id="veiculo" placeholder="Veículo / Placa" style="width:32%;margin-right:2%"/>
+      <input id="destino" placeholder="Destino" style="width:32%;margin-right:2%"/>
+      <input id="motivo" placeholder="Motivo" style="width:32%"/><br/><br/>
+      <button id="btnEntrar" type="submit">Registrar Entrada</button>
+      <button id="btnTest" type="button">Testar JS</button>
+    </form>
+
+    <div id="status" class="ok">Status: aguardando ação...</div>
+
+    <h4>Console (logs do script)</h4>
+    <div id="consoleLog" class="log"></div>
   </div>
 
-  <!-- Formulário -->
-  <form id="formEntrada" class="card bg-secondary p-4 mb-4">
-    <div class="row g-3">
-      <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome do visitante" required></div>
-      <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento (RG/CPF)" required></div>
-      <div class="col-md-4"><input id="veiculo" class="form-control" placeholder="Veículo / Placa"></div>
-      <div class="col-md-4"><input id="destino" class="form-control" placeholder="Destino / Setor"></div>
-      <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo da visita"></div>
-    </div>
-    <div class="d-flex justify-content-center mt-4">
-      <button class="btn btn-success me-3 px-4" type="submit">Registrar Entrada</button>
-      <button type="button" id="btnLimpar" class="btn btn-danger px-4">Limpar</button>
-    </div>
-  </form>
+  <script type="module">
+    // ---------------- IMPORTS FIREBASE ----------------
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  <!-- Filtros -->
-  <div class="card bg-secondary p-3 mb-3">
-    <div class="row g-3 align-items-center">
-      <div class="col-md-4"><input id="filtroBusca" class="form-control" placeholder="Buscar por nome ou documento..."></div>
+    // ---------------- CONFIGURE AQUI ----------------
+    const firebaseConfig = {
+      apiKey: "SUA_API_KEY_AQUI",
+      authDomain: "SEU_PROJETO.firebaseapp.com",
+      projectId: "SEU_PROJETO",
+      storageBucket: "SEU_PROJETO.appspot.com",
+      messagingSenderId: "SEU_ID",
+      appId: "SUA_APP_ID"
+    };
+    // -------------------------------------------------
 
-      <div class="col-md-3 text-center">
-        <div class="btn-group" role="group">
-          <button class="btn btn-outline-light" id="filtroTodos">Todos</button>
-          <button class="btn btn-outline-success" id="filtroEntrada">Entrada</button>
-          <button class="btn btn-outline-warning" id="filtroSaida">Saída</button>
-        </div>
-      </div>
+    // UI helpers
+    const statusEl = document.getElementById('status')
+    const logEl = document.getElementById('consoleLog')
+    const btnEntrar = document.getElementById('btnEntrar')
+    const btnTest = document.getElementById('btnTest')
 
-      <div class="col-md-5 text-center">
-        <select id="filtroData" class="form-select">
-          <option value="todos">📅 Todos os períodos</option>
-          <option value="hoje">Hoje</option>
-          <option value="7dias">Últimos 7 dias</option>
-          <option value="personalizado">Personalizado</option>
-        </select>
-      </div>
-    </div>
+    function log(msg){
+      const ts = new Date().toLocaleTimeString()
+      logEl.textContent = `[${ts}] ${msg}\n` + logEl.textContent
+      console.log(msg)
+    }
+    function setStatus(msg, type='ok'){
+      statusEl.textContent = 'Status: ' + msg
+      statusEl.className = type === 'error' ? 'error' : 'ok'
+    }
 
-    <div id="intervaloDatas" class="mt-3 d-none text-center">
-      <label class="me-2">De:</label>
-      <input type="date" id="dataInicio" class="form-control d-inline-block w-auto me-2">
-      <label class="me-2">Até:</label>
-      <input type="date" id="dataFim" class="form-control d-inline-block w-auto">
-      <button id="btnAplicarData" class="btn btn-primary btn-sm ms-2">Aplicar</button>
-    </div>
-  </div>
+    // quick checks
+    if(!firebaseConfig || !firebaseConfig.projectId || firebaseConfig.projectId === 'SEU_PROJETO'){
+      setStatus('Erro: firebaseConfig não preenchido ou contém placeholders. Cole seu firebaseConfig.', 'error')
+      log('firebaseConfig ausente ou com placeholders. Pare e insira as credenciais reais.')
+      // Still continue so user can see JS loaded
+    } else {
+      log('firebaseConfig detectado: projectId=' + firebaseConfig.projectId)
+    }
 
-  <!-- Tabela -->
-  <div class="card bg-secondary p-3">
-    <h3 class="text-center mb-3">Histórico de Registros</h3>
-    <table class="table table-dark table-striped text-center align-middle">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Documento</th>
-          <th>Veículo</th>
-          <th>Destino</th>
-          <th>Motivo</th>
-          <th>Status</th>
-          <th>Entrada</th>
-          <th>Saída</th>
-        </tr>
-      </thead>
-      <tbody id="listaRegistros"></tbody>
-    </table>
-  </div>
-</div>
+    let db = null
+    try {
+      const app = initializeApp(firebaseConfig)
+      db = getFirestore(app)
+      log('Firebase inicializado com sucesso.')
+      setStatus('Firebase inicializado. Pronto para gravação.')
+    } catch(err) {
+      setStatus('Erro ao inicializar Firebase: ' + (err.message || err), 'error')
+      log('Erro inicializando Firebase: ' + err?.message)
+      // stop here — registrarEntrada will still try and show useful error
+    }
 
-<!-- Firebase (compat) -->
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
-<script src="script.js"></script>
+    // function to save entry
+    async function registrarEntrada(){
+      log('registrarEntrada() chamada.')
+      setStatus('Gravando...', 'ok')
+      btnEntrar.disabled = true
+
+      const nome = document.getElementById('nome').value.trim()
+      const documento = document.getElementById('documento').value.trim()
+      const veiculo = document.getElementById('veiculo').value.trim()
+      const destino = document.getElementById('destino').value.trim()
+      const motivo = document.getElementById('motivo').value.trim()
+
+      if(!nome || !documento){
+        setStatus('Erro: nome e documento são obrigatórios.', 'error')
+        log('Validação: campos obrigatórios ausentes.')
+        btnEntrar.disabled = false
+        return
+      }
+
+      if(!db){
+        setStatus('Erro: Firestore não inicializado corretamente. Verifique firebaseConfig e console.', 'error')
+        log('Abortando gravação: db é null.')
+        btnEntrar.disabled = false
+        return
+      }
+
+      try{
+        // mostra o payload nos logs antes de gravar
+        const payload = { nome, documento, veiculo: veiculo||null, destino: destino||null, motivo: motivo||null, horarioEntrada: serverTimestamp(), horarioSaida: null, status: 'Entrada' }
+        log('Payload a ser gravado: ' + JSON.stringify({ nome, documento, veiculo, destino, motivo }))
+        const ref = await addDoc(collection(db, 'registros_portaria'), payload)
+        log('Documento salvo com id: ' + ref.id)
+        setStatus('✅ Gravado com sucesso (id: ' + ref.id + ')')
+        // limpar campos
+        document.getElementById('form').reset()
+      } catch (err) {
+        // erros comuns: permissões, invalid-api-key, network
+        const em = err?.message || String(err)
+        log('Erro ao gravar: ' + em)
+        setStatus('Erro ao gravar: ' + em, 'error')
+      } finally {
+        btnEntrar.disabled = false
+      }
+    }
+
+    // expose for inline form attribute
+    window.registrarEntrada = registrarEntrada
+
+    // test button: verifica se a função está ligada
+    btnTest.addEventListener('click', () => {
+      log('Botão Testar JS clicado — verificação básica.')
+      setStatus('Teste: JS carregado e respondendo.')
+    })
+
+    // também captura erros globais para mostrar no painel
+    window.addEventListener('error', (e) => {
+      log('Erro global detectado: ' + (e.error?.message || e.message || e))
+      setStatus('Erro runtime: ' + (e.error?.message || e.message || e), 'error')
+    })
+
+    window.addEventListener('unhandledrejection', (ev) => {
+      log('UnhandledRejection: ' + (ev.reason?.message || ev.reason || JSON.stringify(ev.reason)))
+      setStatus('Erro promise: ' + (ev.reason?.message || ev.reason || ''), 'error')
+    })
+  </script>
 </body>
 </html>
